kubernetes/apps/kyverno/tests/chainsaw/network-guardrails/allowed-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allowed-lb-service
  namespace: minecraft
  annotations:
    lbipam.cilium.io/ips: "10.0.0.30"
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - port: 25565
      targetPort: 25565
