kubernetes/apps/kyverno/tests/chainsaw/network-guardrails/missing-ip-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: missing-ip-lb-service
  namespace: minecraft
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - port: 25565
      targetPort: 25565
